; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/rpc/extr_kull_m_rpc.c_KULL_M_RPC_AUTHNSVC.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/rpc/extr_kull_m_rpc.c_KULL_M_RPC_AUTHNSVC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i32] [i32 78, i32 79, i32 78, i32 69, i32 0], align 4
@.str.1 = private unnamed_addr constant [14 x i32] [i32 71, i32 83, i32 83, i32 95, i32 78, i32 69, i32 71, i32 79, i32 84, i32 73, i32 65, i32 84, i32 69, i32 0], align 4
@.str.2 = private unnamed_addr constant [6 x i32] [i32 87, i32 73, i32 78, i32 78, i32 84, i32 0], align 4
@.str.3 = private unnamed_addr constant [13 x i32] [i32 71, i32 83, i32 83, i32 95, i32 75, i32 69, i32 82, i32 66, i32 69, i32 82, i32 79, i32 83, i32 0], align 4
@.str.4 = private unnamed_addr constant [2 x i32] [i32 63, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @KULL_M_RPC_AUTHNSVC(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %9 [
    i32 129, label %5
    i32 130, label %6
    i32 128, label %7
    i32 131, label %8
  ]

5:                                                ; preds = %1
  store i8* bitcast ([5 x i32]* @.str to i8*), i8** %3, align 8
  br label %10

6:                                                ; preds = %1
  store i8* bitcast ([14 x i32]* @.str.1 to i8*), i8** %3, align 8
  br label %10

7:                                                ; preds = %1
  store i8* bitcast ([6 x i32]* @.str.2 to i8*), i8** %3, align 8
  br label %10

8:                                                ; preds = %1
  store i8* bitcast ([13 x i32]* @.str.3 to i8*), i8** %3, align 8
  br label %10

9:                                                ; preds = %1
  store i8* bitcast ([2 x i32]* @.str.4 to i8*), i8** %3, align 8
  br label %10

10:                                               ; preds = %9, %8, %7, %6, %5
  %11 = load i8*, i8** %3, align 8
  ret i8* %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
